Fix header alignments

--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,8 @@
 .header {
   display: grid;
   grid-template-columns: 80% 1fr;
-  grid-template-rows: repeat(2, 1fr);
-  justify-content: space-between;
+  grid-template-rows: 1fr 1fr;
+  justify-content: center;
   align-items: center;
   max-width: 100vw;
   margin: 0;
@@ -19,11 +19,11 @@
 }
 
 .header :nth-child(1) {
-  grid-area: 2 / 1 / span 1 / span 1;
+  grid-area: 1 / 1 / span 1 / span 1;
 }
 
 .header :nth-child(2) {
-  grid-area: 3 / 1 / span 1 / span 1;
+  grid-area: 2 / 1 / span 1 / span 1;
 }
 
 .header :nth-child(3) {
@@ -40,13 +40,12 @@ h1 {
   margin: 0;
   padding: 0;
   max-width: 200px;
-  align-self: center;
   justify-self: center;
 }
 
 .scoreboard {
   text-align: right;
-  padding-bottom: 2rem;
+  align-self: center;
 }
 
 .card-container {
